--- a/src/app/navegacion/navegacion.html
+++ b/src/app/navegacion/navegacion.html
@@ -2,9 +2,9 @@
 
     <img src="https://instructoresnodoatlantico.wordpress.com/wp-content/uploads/2014/03/logosenabase.png?w=1400&h=" alt="logo">
 
-    <a routerLink="/infoA" (click)="cambiarMenu(1)" routerLinkActive="active">🏠</a>
-    <a routerLink="/infoB" (click)="cambiarMenu(2)" routerLinkActive="active">⚙️</a>
-    <a routerLink="/infoC" (click)="cambiarMenu(3)" routerLinkActive="active">📊</a>
+    <a routerLink="/" (click)="cambiarMenu(1)" routerLinkActive="active">🏠</a>
+    <a routerLink="/" (click)="cambiarMenu(2)" routerLinkActive="active">⚙️</a>
+    <a routerLink="/" (click)="cambiarMenu(3)" routerLinkActive="active">📊</a>
 
 </nav>
 
