--- a/src/app/informacion/informacion-buscar/informacion-buscar.html
+++ b/src/app/informacion/informacion-buscar/informacion-buscar.html
@@ -1,2 +1,7 @@
-<h2>Search</h2>
-<p>Actualmente no esta buscando</p>
+<div class="text-center">
+
+    <h1>Buscador</h1>
+    <br>
+    <h5>Es un sistema informático que encuentra información en Internet, en una computadora o en otros servidores web através de palabras clave</h5>
+
+</div>
