--- a/src/app/informacion/informacion-ficha/informacion-ficha.html
+++ b/src/app/informacion/informacion-ficha/informacion-ficha.html
@@ -1,3 +1,7 @@
-<h1>Ficha</h1>
+<div class="text-center">
 
-<p>Esta es una ficha ADSO</p>
+    <h1>Ficha</h1>
+    <br>
+    <h5>Esta es la ficha ADSO 3066474</h5>
+
+</div>
