--- a/src/app/informacion/informacion-html/informacion-html.html
+++ b/src/app/informacion/informacion-html/informacion-html.html
@@ -1,2 +1,8 @@
-<h2>Html</h2>
-<p>Hola esto es un trabajo del tema</p>
+<div class="text-center">
+
+    <h1>Html</h1>
+    <br>
+    <h5>HTML son las siglas de HyperText Markup Language (Lenguaje de Marcado de Hipertexto) y es el lenguaje estándar
+        para crear y estructurar el contenido de las páginas web</h5>
+
+</div>
