--- a/src/app/informacion/informacion-inicio/informacion-inicio.html
+++ b/src/app/informacion/informacion-inicio/informacion-inicio.html
@@ -1,2 +1,7 @@
-<h2>Introduccion</h2>
-<p>Esto es una introduccion del tema</p>
+<div class="text-center">
+
+    <h1>Introduccion</h1>
+    <br>
+    <h5>Esto es una introduccion del tema </h5>
+
+</div>
