--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,17 @@
-<app-navegacion></app-navegacion>
+<div class="container-fluid mt-3">
+  <div class="row">
 
-<app-interaccion></app-interaccion>
+    <div class="col-12 col-md-3">
+        <app-navegacion></app-navegacion>
+    </div>
+    
+    <div class="col-12 col-md-3">
+      <app-interaccion></app-interaccion>
+    </div>
 
-<router-outlet></router-outlet>
+    <div class="col-12 col-md-6">
+      <router-outlet></router-outlet>
+    </div>
 
+  </div>
+</div>
