--- a/src/app/navegacion/navegacion.html
+++ b/src/app/navegacion/navegacion.html
@@ -1,10 +1,18 @@
-<nav class="menuPrincipal">
+<nav class="nav d-flex flex-column align-items-center">
 
-    <img src="https://instructoresnodoatlantico.wordpress.com/wp-content/uploads/2014/03/logosenabase.png?w=1400&h=" alt="logo">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/8/83/Sena_Colombia_logo.svg" alt="logo"
+        class="logo mb-4" />
 
-    <a routerLink="/" (click)="cambiarMenu(1)" routerLinkActive="active">🏠</a>
-    <a routerLink="/" (click)="cambiarMenu(2)" routerLinkActive="active">⚙️</a>
-    <a routerLink="/" (click)="cambiarMenu(3)" routerLinkActive="active">📊</a>
+    <a routerLinkActive="active-menu" class="nav-icon" (click)="cambiarMenu(1)">
+        🏠
+    </a>
+
+    <a routerLinkActive="active-menu" class="nav-icon" (click)="cambiarMenu(2)">
+        ⚙️
+    </a>
+
+    <a routerLinkActive="active-menu" class="nav-icon" (click)="cambiarMenu(3)">
+        📊
+    </a>
 
 </nav>
-
